test new gateway config

--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -3,8 +3,6 @@ kind: Gateway
 metadata:
   name: vault-gateway
   namespace: vault-infra
-  annotations:
-    cert-manager.io/cluster-issuer: cert-manager-staging
 spec:
   gatewayClassName: cilium
   listeners:
@@ -18,15 +16,30 @@ spec:
     - name: https
       hostname: vault.decort.tech
       port: 443
-      protocol: HTTPS
+      protocol: TLS    # Changed from HTTPS to TLS
       allowedRoutes:
         namespaces:
           from: All
       tls:
-        mode: Terminate
-        certificateRefs:
-          - name: vault-tls
+        mode: Passthrough  # Changed from Terminate to Passthrough
 ---
+apiVersion: gateway.networking.k8s.io/v1alpha2  # Note: TLSRoute is still alpha
+kind: TLSRoute
+metadata:
+  name: vault-route
+  namespace: vault-infra
+spec:
+  parentRefs:
+    - name: vault-gateway
+      sectionName: https
+  hostnames:
+    - "vault.decort.tech"
+  rules:
+    - backendRefs:
+        - name: vault-active
+          port: 8200
+---
+# Keep the HTTP to HTTPS redirect
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
@@ -35,7 +48,6 @@ metadata:
 spec:
   parentRefs:
     - name: vault-gateway
-      namespace: vault-infra
       sectionName: http
   hostnames:
     - "vault.decort.tech"
@@ -45,20 +57,3 @@ spec:
           requestRedirect:
             scheme: https
             statusCode: 301
----
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: vault-route
-  namespace: vault-infra
-spec:
-  parentRefs:
-    - name: vault-gateway
-      namespace: vault-infra
-      sectionName: https
-  hostnames:
-    - "vault.decort.tech"
-  rules:
-    - backendRefs:
-        - name: vault-active
-          port: 8200
