--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -3,6 +3,8 @@ kind: Gateway
 metadata:
   name: vault-gateway
   namespace: vault-infra
+  annotations:
+    cert-manager.io/cluster-issuer: "cert-manager-staging"  # Change to prod when ready
 spec:
   gatewayClassName: cilium
   listeners:
@@ -16,15 +18,17 @@ spec:
     - name: https
       hostname: vault.decort.tech
       port: 443
-      protocol: TLS    # Changed from HTTPS to TLS
+      protocol: HTTPS 
       allowedRoutes:
         namespaces:
           from: All
       tls:
-        mode: Passthrough  # Changed from Terminate to Passthrough
+        mode: Terminate  
+        certificateRefs:
+          - name: vault-tls 
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha2  # Note: TLSRoute is still alpha
-kind: TLSRoute
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
 metadata:
   name: vault-route
   namespace: vault-infra
@@ -39,21 +43,28 @@ spec:
         - name: vault-active
           port: 8200
 ---
-# Keep the HTTP to HTTPS redirect
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: vault-route-redirect
+  name: vault-route
   namespace: vault-infra
 spec:
   parentRefs:
     - name: vault-gateway
-      sectionName: http
+      sectionName: https
   hostnames:
     - "vault.decort.tech"
   rules:
-    - filters:
-        - type: RequestRedirect
-          requestRedirect:
-            scheme: https
-            statusCode: 301
+    - backendRefs:
+        - name: vault-active
+          port: 8200
+      filters:
+        - type: RequestHeaderModifier
+          requestHeaderModifier:
+            add:
+              - name: "X-Forwarded-For"
+                value: "${.source.address}"
+              - name: "X-Real-IP"
+                value: "${.source.address}"
+              - name: "X-Forwarded-Proto"
+                value: "https"
