--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -77,8 +77,18 @@ server:
           tls_disable = 0
           address = "[::]:8200"
           cluster_address = "[::]:8201"
+
           tls_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
           tls_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
+
+          # X-Forwarded-For configuration
+          x_forwarded_for_authorized_addrs = "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
+          x_forwarded_for_reject_not_authorized = "false"
+          x_forwarded_for_reject_not_present = "false"
+
+          # Client certificate settings
+          tls_require_and_verify_client_cert = "false"
+          tls_disable_client_certs = "true"
         }
 
         service_registration "kubernetes" {
