--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -30,18 +30,20 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: vault-route
+  name: vault-route-redirect
   namespace: vault-infra
 spec:
   parentRefs:
     - name: vault-gateway
-      sectionName: https
+      sectionName: http
   hostnames:
     - "vault.decort.tech"
   rules:
-    - backendRefs:
-        - name: vault-active
-          port: 8200
+    - filters:
+        - type: RequestRedirect
+          requestRedirect:
+            scheme: https
+            statusCode: 301
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
