--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -83,8 +83,8 @@ server:
 
           # X-Forwarded-For configuration
           x_forwarded_for_authorized_addrs = "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
-          x_forwarded_for_reject_not_authorized = "true"
-          x_forwarded_for_reject_not_present = "true"
+          x_forwarded_for_reject_not_authorized = "false"
+          x_forwarded_for_reject_not_present = "false"
 
           # Client certificate settings
           tls_require_and_verify_client_cert = "false"
