--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -81,14 +81,18 @@ server:
           tls_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
           tls_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
 
-          # X-Forwarded-For configuration
+          # Trust forwarded headers from Gateway
           x_forwarded_for_authorized_addrs = "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
           x_forwarded_for_reject_not_authorized = "false"
           x_forwarded_for_reject_not_present = "false"
+          x_forwarded_for_hop_skips = "2"  # Add this to skip Gateway hops
 
-          # Client certificate settings
-          tls_require_and_verify_client_cert = "false"
+          # Disable client cert requirements for Gateway traffic
           tls_disable_client_certs = "true"
+          
+          # Allow proxied requests
+          proxy_protocol_behavior = "allow_authorized"
+          proxy_protocol_authorized_addrs = "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
         }
 
         service_registration "kubernetes" {
