--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -45,6 +45,7 @@ spec:
             scheme: https
             statusCode: 301
 ---
+---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
@@ -63,14 +64,10 @@ spec:
       filters:
         - type: RequestHeaderModifier
           requestHeaderModifier:
-            set:
+            add:
               - name: "X-Forwarded-For"
                 value: "${.source.address}"
               - name: "X-Real-IP"
                 value: "${.source.address}"
               - name: "X-Forwarded-Proto"
                 value: "https"
-              - name: "X-Forwarded-Port"
-                value: "443"
-              - name: "X-Forwarded-Host"
-                value: "vault.decort.tech"
