--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -81,17 +81,14 @@ server:
           tls_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
           tls_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
 
-          # Trust forwarded headers from Gateway
+          # X-Forwarded-For configuration
           x_forwarded_for_authorized_addrs = "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
           x_forwarded_for_reject_not_authorized = "false"
           x_forwarded_for_reject_not_present = "false"
 
-          # Disable client cert requirements for Gateway traffic
+          # Client certificate settings
+          tls_require_and_verify_client_cert = "false"
           tls_disable_client_certs = "true"
-          
-          # Allow proxied requests
-          proxy_protocol_behavior = "allow_authorized"
-          proxy_protocol_authorized_addrs = "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
         }
 
         service_registration "kubernetes" {
