--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -78,6 +78,7 @@ server:
           address = "[::]:8200"
           cluster_address = "[::]:8201"
 
+
           tls_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
           tls_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
 
@@ -89,6 +90,9 @@ server:
           # Client certificate settings
           tls_require_and_verify_client_cert = "false"
           tls_disable_client_certs = "true"
+
+          proxy_protocol_behavior = "allow_authorized"
+          proxy_protocol_authorized_addrs = "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
         }
 
         service_registration "kubernetes" {
