--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -76,3 +76,4 @@ spec:
                 value: "443"
             add:  # Additional headers that we want to append
               - name: "X-Forwarded-Host"
+                value: "vault.decort.tech"
