--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -58,7 +58,7 @@ spec:
     - "vault.decort.tech"
   rules:
     - backendRefs:
-        - name: vault-active
+        - name: vault
           port: 8200
       filters:
         - type: RequestHeaderModifier
