--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -63,7 +63,7 @@ spec:
       filters:
         - type: RequestHeaderModifier
           requestHeaderModifier:
-            set:  # Using 'set' to ensure headers are overwritten, not appended
+            add:  # Using 'set' to ensure headers are overwritten, not appended
               - name: "Host"
                 value: "${.host}"
               - name: "X-Forwarded-For"
