--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -4,17 +4,10 @@ metadata:
   name: vault-gateway
   namespace: vault-infra
   annotations:
-    cert-manager.io/cluster-issuer: "cert-manager-staging"
+    cert-manager.io/cluster-issuer: "cert-manager-prd"
 spec:
   gatewayClassName: cilium
   listeners:
-    - name: http
-      hostname: vault.decort.tech
-      port: 80
-      protocol: HTTP
-      allowedRoutes:
-        namespaces:
-          from: All
     - name: https
       hostname: vault.decort.tech
       port: 443
@@ -23,27 +16,9 @@ spec:
         namespaces:
           from: All
       tls:
-        mode: Terminate  
+        mode: Terminate
         certificateRefs:
-          - name: vault-tls 
----
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: vault-route-redirect
-  namespace: vault-infra
-spec:
-  parentRefs:
-    - name: vault-gateway
-      sectionName: http
-  hostnames:
-    - "vault.decort.tech"
-  rules:
-    - filters:
-        - type: RequestRedirect
-          requestRedirect:
-            scheme: https
-            statusCode: 301
+          - name: vault-tls
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
@@ -64,19 +39,10 @@ spec:
       filters:
         - type: RequestHeaderModifier
           requestHeaderModifier:
-            add:
+            set:
               - name: "X-Forwarded-For"
                 value: "${.source.address}"
               - name: "X-Real-IP"
                 value: "${.source.address}"
               - name: "X-Forwarded-Proto"
                 value: "https"
-              - name: "X-Forwarded-Port"
-                value: "443"
-              - name: "Host"
-                value: "${.host}"
-        - type: URLRewrite
-          urlRewrite:
-            path:
-              type: ReplacePrefixMatch
-              replacePrefixMatch: "/"
