--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -4,10 +4,17 @@ metadata:
   name: vault-gateway
   namespace: vault-infra
   annotations:
-    cert-manager.io/cluster-issuer: "cert-manager-prd"
+    cert-manager.io/cluster-issuer: "cert-manager-staging"
 spec:
   gatewayClassName: cilium
   listeners:
+    - name: http
+      hostname: vault.decort.tech
+      port: 80
+      protocol: HTTP
+      allowedRoutes:
+        namespaces:
+          from: All
     - name: https
       hostname: vault.decort.tech
       port: 443
@@ -16,9 +23,27 @@ spec:
         namespaces:
           from: All
       tls:
-        mode: Terminate
+        mode: Terminate  
         certificateRefs:
-          - name: vault-tls
+          - name: vault-tls 
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: vault-route-redirect
+  namespace: vault-infra
+spec:
+  parentRefs:
+    - name: vault-gateway
+      sectionName: http
+  hostnames:
+    - "vault.decort.tech"
+  rules:
+    - filters:
+        - type: RequestRedirect
+          requestRedirect:
+            scheme: https
+            statusCode: 301
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
@@ -35,7 +60,6 @@ spec:
     - backendRefs:
         - name: vault-active
           port: 8200
-          kind: Service
       filters:
         - type: RequestHeaderModifier
           requestHeaderModifier:
@@ -46,5 +70,3 @@ spec:
                 value: "${.source.address}"
               - name: "X-Forwarded-Proto"
                 value: "https"
-              - name: "Host"
-                value: "${.host}"
