--- a/infrastructure/secret-management/vault/kustomization.yaml
+++ b/infrastructure/secret-management/vault/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - base/namespace.yaml
   - base/gateway.yaml
-  #- base/certificate.yaml
+  - base/certificate.yaml
   - base/vault-approver-rbac.yaml
   - config/secrets/pkcs12-secret.yaml
 
