--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -83,7 +83,7 @@ server:
           tls_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
 
           # X-Forwarded-For configuration
-          x_forwarded_for_authorized_addrs = ["10.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16"]
+          x_forwarded_for_authorized_addrs = "0.0.0.0/0"
           x_forwarded_for_reject_not_authorized = "false"
           x_forwarded_for_reject_not_present = "false"
 
