--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -8,13 +8,6 @@ metadata:
 spec:
   gatewayClassName: cilium
   listeners:
-    - name: http
-      hostname: vault.decort.tech
-      port: 80
-      protocol: HTTP
-      allowedRoutes:
-        namespaces:
-          from: All
     - name: https
       hostname: vault.decort.tech
       port: 443
@@ -26,24 +19,6 @@ spec:
         mode: Terminate  
         certificateRefs:
           - name: vault-tls 
----
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: vault-route-redirect
-  namespace: vault-infra
-spec:
-  parentRefs:
-    - name: vault-gateway
-      sectionName: http
-  hostnames:
-    - "vault.decort.tech"
-  rules:
-    - filters:
-        - type: RequestRedirect
-          requestRedirect:
-            scheme: https
-            statusCode: 301
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
@@ -60,6 +35,12 @@ spec:
     - backendRefs:
         - name: vault-active
           port: 8200
+          options:
+            kind: Service
+            weight: 1
+            backendRef:
+              namespace: vault-infra
+              protocol: https
       filters:
         - type: RequestHeaderModifier
           requestHeaderModifier:
