--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -86,11 +86,11 @@ server:
           x_forwarded_for_authorized_addrs = "0.0.0.0/0"
           x_forwarded_for_reject_not_authorized = "false"
           x_forwarded_for_reject_not_present = "false"
+          x_forwarded_for_hop_skips = 1
 
           # Client certificate settings
           tls_require_and_verify_client_cert = "false"
           tls_disable_client_certs = "true"
-
         }
 
         service_registration "kubernetes" {
