--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -4,21 +4,46 @@ metadata:
   name: vault-gateway
   namespace: vault-infra
   annotations:
-    cert-manager.io/cluster-issuer: "cert-manager-staging"
+    cert-manager.io/cluster-issuer: cert-manager-staging
 spec:
   gatewayClassName: cilium
   listeners:
+    - name: http
+      hostname: vault.decort.tech
+      port: 80
+      protocol: HTTP
+      allowedRoutes:
+        namespaces:
+          from: All
     - name: https
       hostname: vault.decort.tech
       port: 443
-      protocol: HTTPS 
+      protocol: HTTPS
       allowedRoutes:
         namespaces:
           from: All
       tls:
-        mode: Terminate  
+        mode: Terminate
         certificateRefs:
-          - name: vault-tls 
+          - name: vault-tls
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: vault-route-redirect
+  namespace: vault-infra
+spec:
+  parentRefs:
+    - name: vault-gateway
+      sectionName: http
+  hostnames:
+    - "vault.decort.tech"
+  rules:
+    - filters:
+        - type: RequestRedirect
+          requestRedirect:
+            scheme: https
+            statusCode: 301
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
@@ -35,16 +60,10 @@ spec:
     - backendRefs:
         - name: vault-active
           port: 8200
-          options:
-            kind: Service
-            weight: 1
-            backendRef:
-              namespace: vault-infra
-              protocol: https
       filters:
         - type: RequestHeaderModifier
           requestHeaderModifier:
-            add:
+            set:
               - name: "X-Forwarded-For"
                 value: "${.source.address}"
               - name: "X-Real-IP"
