--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -55,7 +55,7 @@ spec:
     group: ""
     kind: Service
     name: vault-active
-  tls:
+  validation:
     hostname: vault.vault-infra.svc
     caCertificateRefs:
       - group: ""
