--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -56,7 +56,7 @@ spec:
       kind: Service
       name: vault-active
   validation:
-    hostname: vault.decort.tech
+    hostname: "*.vault-internal"
     caCertificateRefs:
       - group: ""
         kind: Secret
