--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -79,6 +79,7 @@ server:
           address = "[::]:8200"
           cluster_address = "[::]:8201"
 
+          tls_client_ca_file = "/vault/userconfig/vault-ca-tls/ca.crt"
 
           tls_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
           tls_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
@@ -90,8 +91,8 @@ server:
           x_forwarded_for_hop_skips = 1
 
           # Client certificate settings
-          tls_require_and_verify_client_cert = "false"
-          tls_disable_client_certs = "true"
+          tls_require_and_verify_client_cert = "true"
+          tls_disable_client_certs = "false"
         }
 
         service_registration "kubernetes" {
