--- a/infrastructure/secret-management/vault/kustomization.yaml
+++ b/infrastructure/secret-management/vault/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - base/gateway.yaml
   - base/certificate.yaml
   - base/vault-approver-rbac.yaml
+  - base/ca_configmap.yaml
   - config/secrets/pkcs12-secret.yaml
 
 helmCharts:
