--- a/.envrc
+++ b/.envrc
@@ -6,5 +6,5 @@ export ALL="$CONTROLPLANE,$WORKERS"
 export C0=$(echo $CONTROLPLANE | cut -d, -f 1)
 export W0=$(echo $WORKERS | cut -d, -f 1)
 export ARM_ACCESS_KEY=$(az storage account keys list --resource-group rg-dct-prd-westeu --account-name dcttfbackendprod001 | jq '.[1].value' -r)
-export VAULT_ADDR=https://vault.decort.tech
+export VAULT_ADDR="https://vault.decort.tech"
 export VAULT_SKIP_VERIFY=true
