feat: Vault TLS passthrough (#77)
After a week of banging my head to get HTTPS traffic between the gateway
and the vault-active service to work, either by setting headers or
trying the Gateway API BackendTLSPolicy CRD. Unfortunately this CRD
isn't supported by Cilium at the moment.

For now TLS passthrough has to suffice.

--- a/infrastructure/secret-management/vault/application.yaml
+++ b/infrastructure/secret-management/vault/application.yaml
@@ -14,6 +14,12 @@ spec:
   destination:
     namespace: vault-infra
     server: https://kubernetes.default.svc
+  ignoreDifferences:
+  - group: admissionregistration.k8s.io
+    kind: MutatingWebhookConfiguration
+    name: vault-agent-injector-cfg
+    jsonPointers:
+    - /webhooks/0/clientConfig/caBundle
   syncPolicy:
     automated:
       prune: true
