--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -3,8 +3,6 @@ kind: Gateway
 metadata:
   name: vault-gateway
   namespace: vault-infra
-  annotations:
-    cert-manager.io/cluster-issuer: cert-manager-staging
 spec:
   gatewayClassName: cilium
   listeners:
@@ -18,14 +16,12 @@ spec:
     - name: https
       hostname: vault.decort.tech
       port: 443
-      protocol: HTTPS
+      protocol: TLS
       allowedRoutes:
         namespaces:
           from: All
       tls:
-        mode: Terminate
-        certificateRefs:
-          - name: vault-tls
+        mode: Passthrough
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
@@ -45,8 +41,8 @@ spec:
             scheme: https
             statusCode: 301
 ---
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
+apiVersion: gateway.networking.k8s.io/v1alpha2
+kind: TLSRoute
 metadata:
   name: vault-route
   namespace: vault-infra
@@ -60,3 +56,4 @@ spec:
     - backendRefs:
         - name: vault-active
           port: 8200
+
