--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -57,7 +57,7 @@ server:
     AZURE_CLIENT_ID: 242197e5-231a-48a8-8d49-99afdd599fbf
     AZURE_TENANT_ID: 9efbb2a3-8e4f-4a4b-ae0b-e53fe5049a2a
     VAULT_AZUREKEYVAULT_VAULT_NAME: kv-lab-infra-prd-westeu
-    VAULT_AZUREKEYVAULT_KEY_NAME: vault-key
+    VAULT_AZUREKEYVAULT_KEY_NAME: vault-unseal
 
   extraSecretEnvironmentVars:
     - envName: AZURE_CLIENT_SECRET
