--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -113,7 +113,7 @@ server:
           path = "/vault/data"
         
           retry_join {
-            leader_api_addr         = "https://vault-active:8200"
+            leader_api_addr         = "https://vault-0.vault-internal:8200"
             leader_tls_servername   = "vault"
             leader_ca_cert_file     = "/vault/userconfig/vault-ca-tls/ca.crt"
             leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
@@ -121,7 +121,7 @@ server:
           }
     
           retry_join {
-            leader_api_addr         = "https://vault-active:8200"
+            leader_api_addr         = "https://vault-1.vault-internal:8200"
             leader_tls_servername   = "vault"
             leader_ca_cert_file     = "/vault/userconfig/vault-ca-tls/ca.crt"
             leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
@@ -129,7 +129,7 @@ server:
           }
     
           retry_join {
-            leader_api_addr         = "https://vault-active:8200"
+            leader_api_addr         = "https://vault-2.vault-internal:8200"
             leader_tls_servername   = "vault"
             leader_ca_cert_file     = "/vault/userconfig/vault-ca-tls/ca.crt"
             leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
